# water_record

./: Dockerfile  config.yaml  database.db  pyproject.toml  test.db
logs/: log.txt
my_app/: main.py
my_app/core/: controller.py  models.py  repository.py  router.py  schema.py  servicies.py
my_app/operations/: hydration_operations.py  models.py  repository.py  router.py  schema.py  service.py
my_app/setup/: config.py  database.py  settings.py  setup.py
