[tool.poetry]
name = "waterrecord"
version = "0.1.0"
description = ""
authors = ["tox1tos <artemyakor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
pydantic-settings = "^2.8.1"
aiosqlite = "^0.21.0"


[tool.poetry.scripts]
start = "waterrecord.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
